<resources>
    <string name="app_name">缘份吧</string>
    <string name="app_storage_name">xiaou</string>
    <string name="net_online_pre">在线-</string>
    <string name="net_offline">离线</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="tip">提示</string>
    <string name="exit">退出</string>
    <string name="send">发送</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="request_error">请求出错!</string>
    <string name="deleted">删除中...</string>
    <string name="ignore">忽略中...</string>
    <string name="main_btn_discovery">发现</string>
    <string name="main_btn_mail">消息</string>
    <string name="main_btn_rank">风云榜</string>
    <string name="main_btn_plaza">广场</string>
    <string name="main_btn_user">我的</string>
    <string name="base_title_back">返回</string>
    <string name="title_right_submit">提交</string>
    <string name="title_right_filter">筛选</string>
    <string name="title_loginact">用户登录</string>
    <string name="title_reg">用户注册</string>
    <string name="title_findpwdact">重置密码</string>
    <string name="title_recommend_filter">筛选</string>
    <string name="title_recommend">推荐的人</string>
    <string name="title_phone_certification">认证手机号</string>
    <string name="title_feedback">意见反馈</string>
    <string name="title_reginfo_complete">完善资料</string>
    <string name="title_set">设置</string>
    <string name="title_about">关于</string>
    <string name="title_pwd_set">密码设置</string>
    <string name="title_suggest">意见反馈</string>
    <string name="title_auth">我的认证</string>
    <string name="title_videoauth">自拍认证</string>
    <string name="rank_this_week">本周</string>
    <string name="rank_last_week">上周</string>
    <string name="switch_stealth">一键隐身</string>
    <string name="switch_shaker">震动提醒</string>
    <string name="switch_voice">声音提醒</string>
    <string name="switch_acceptmsg_tip">打开该按钮，即表示你愿意接受系统推荐给你的消息</string>
    <string name="switch_stealth_tip">打开该按钮，即表示不再出现在推荐列表中</string>
    <string name="button_feedback">意见反馈</string>
    <string name="button_active">活动相关</string>
    <string name="button_clean_chathistory">清空聊天记录</string>
    <string name="button_clean_cache">清除缓存</string>
    <string name="button_clean_cache_tip">缓存状态良好</string>
    <string name="button_exit">退出登录</string>
    <string name="ext_feedback_hit">填写对缘份吧的意见和建议</string>
    <string name="ext_feedback_contact">联系方式</string>
    <string name="ext_feedback_contact_hit">联系方式：（手机/QQ/邮箱）</string>
    <string name="ext_suggest_hit">写些对缘份吧的意见和建议……</string>
    <string name="toast_feedback_submit">提交成功，感谢您的支持</string>
    <string name="toast_under_review">审核中，请稍后再试</string>
    <string name="button_version">版本</string>
    <string name="button_help">帮助</string>
    <string name="contact_kefu">联系客服</string>
    <string name="toast_update_ok">修改成功</string>
    <string name="dal_exit_content">确定退出登录吗</string>
    <string name="dal_vip_content">您非VIP会员，无法开启此功能</string>
    <string name="dal_auth_content">开启视频、音频功能，需要通过自拍认证</string>
    <string name="dal_exit_title">退出登录</string>
    <string name="dal_vip_open">去开通</string>
    <string name="dal_auth_open">去认证</string>
    <string name="txt_set_topuid_desc">当前账号：</string>
    <string name="txt_suggest_desc">意见一旦被采纳，我们会有小礼品赠送，请记得留下您的联系方式哦。</string>
    <string name="txt_noheard_ts">温馨提示：请上传清晰美观的个人近照，上传宠物、照片不清晰、裸露的照片不予通过</string>
    <string name="txt_head_ts">温馨提示：请上传真实、清晰美观的个人近照，上传宠物照、照片不清晰、裸露的照片不予通过</string>
    <string name="copy">复制</string>
    <string name="center_my_invite_code">我的邀请码：%s</string>
    <string name="center_vip_privilege">VIP特权</string>
    <string name="center_phone_verify">手机认证</string>
    <string name="center_video_verify">真人认证</string>
    <string name="center_vip_to_open">立即开通</string>
    <string name="center_vip_left_day">已开通</string>
    <string name="center_phone_to_verify">立即认证</string>
    <string name="center_video_to_verify">我的认证</string>
    <string name="center_phone_has_verify">已认证</string>
    <string name="user_info_send">发信</string>
    <string name="user_info_hi">打招呼</string>
    <string name="user_info_hi_fail">打招呼失败</string>
    <string name="user_info_hi_suc">打招呼成功</string>
    <string name="user_info_has_hi">已打招呼</string>
    <string name="user_info_hi_repeat">不可以重复打招呼！</string>
    <string name="user_info_video">发视频</string>
    <string name="user_info_look_at_her">看看她</string>
    <string name="user_info_look_at_he">看看他</string>
    <string name="user_info_voice">发语音</string>
    <string name="user_info_age">%d岁</string>
    <string name="user_info_follow_count">关注 %d</string>
    <string name="user_info_earn_redbag">我要赚红包</string>
    <string name="user_info_redbag_num">%s元</string>
    <string name="user_info_photo">我的相册</string>
    <string name="user_info_own_video">我的视频</string>
    <string name="user_info_other_video">%s的视频</string>
    <string name="user_info_check_video_send">立即送她</string>
    <string name="user_info_check_video_pay">查看该视频需要：</string>
    <string name="user_info_check_video_price">%d朵玫瑰：</string>
    <string name="user_info_check_video_fail">视频加载失败</string>
    <string name="user_info_require">正在获取个人资料...</string>
    <string name="user_info_follow_suc">关注成功</string>
    <string name="user_info_follow_fail">关注失败</string>
    <string name="user_info_unfollow_suc">取消关注成功</string>
    <string name="user_info_unfollow_fail">取消关注失败</string>
    <string name="user_info_last_week_video_hot">最近1周私密视频总人气：</string>
    <string name="user_edit_zone_info">个人空间</string>
    <string name="user_edit_base_info">基本信息</string>
    <string name="user_edit_info_contact">联系方式</string>
    <string name="user_edit_info_detail_info">详细资料</string>
    <string name="user_edit_info_nick">昵称</string>
    <string name="user_edit_info_gender">性别</string>
    <string name="user_edit_info_age">年龄</string>
    <string name="user_edit_info_addr">居住地</string>
    <string name="user_edit_info_height">身高</string>
    <string name="user_edit_info_income">月收入</string>
    <string name="user_edit_info_marry">婚姻状态</string>
    <string name="user_edit_info_set">请设置</string>
    <string name="user_edit_info_phone">手机</string>
    <string name="user_edit_info_not_phone">手机号已绑定，无法修改</string>
    <string name="user_edit_info_not_age">年龄无法修改</string>
    <string name="user_edit_info_not_gender">性别无法修改</string>
    <string name="user_edit_info_wechat">微信</string>
    <string name="user_edit_info_edu">学历</string>
    <string name="user_edit_info_title_job">工作情况</string>
    <string name="user_edit_info_job">职业</string>
    <string name="user_edit_info_birthday">生日</string>
    <string name="user_edit_info_weight">体重</string>
    <string name="user_edit_info_star">星座</string>
    <string name="user_edit_info_open">公开</string>
    <string name="user_edit_info_just_vip_open">仅对VIP公开</string>
    <string name="user_edit_info_auth_open">对VIP用户公开</string>
    <string name="user_edit_info_auth_secret">保密</string>
    <string name="user_edit_info_input_nickname">请输入你要修改的昵称</string>
    <string name="user_edit_info_input_nickname_limt">最多只能输入7个字符</string>
    <string name="user_edit_info_input_qq">请输入您的QQ</string>
    <string name="user_edit_info_input_mobile">请输入您的联系方式</string>
    <string name="user_edit_info_input_wechat">请输入您的微信号</string>
    <string name="user_edit_info_correct_mobile">请输入正确格式的电话号码</string>
    <string name="user_edit_info_correct_wechat">请输入正确格式的微信号码</string>
    <string name="user_edit_info_correct_qq">请输入正确格式的QQ号码</string>
    <string name="user_fragment_no_verify_phone">为了你的账户安全，建议你绑定手机号码。</string>
    <string name="bt_send_code_normal">获取验证码</string>
    <string name="bt_send_code_press">重新发送（%1$d）秒</string>
    <string name="str_not_filled">未填写</string>
    <string name="txt_qq_desc">在线QQ</string>
    <string name="txt_phone">手机号</string>
    <string name="txt_verifycode">请输入验证码</string>
    <string name="txt_setpwd">新密码</string>
    <string name="txt_verify_tip_up">为了您的账号安全，请绑定手机号码</string>
    <string name="txt_sendmsg_tip">您的手机将会收到一条有验证码的短信</string>
    <string name="txt_phoneverify_hit">13574193515</string>
    <string name="ext_phone_hit">手机号</string>
    <string name="ext_verifycode_hit">请输入短信中的验证码</string>
    <string name="bt_verify">立即绑定</string>
    <string name="toast_server_busy">系统忙，请稍候再试。</string>
    <string name="toast_phone_verified">您的帐号已与手机绑定，不能再绑定。</string>
    <string name="toast_phone_used">该手机已经被验证过了，请输入其他的手机号。</string>
    <string name="toast_code_error">验证码错误。</string>
    <string name="txt_phongbind_privilege_desc">绑定手机号码可获得以下特权:</string>
    <string name="txt_Phonebind_privilege">1、绑定手机号码，账号更安全。\n2、账号支持手机号码登录。\n3、VIP用户可获得专属的VIP客服提供帮助。</string>
    <string name="txt_customerservice_qq">客服QQ:</string>
    <string name="txt_customerservice_phone">客服电话:</string>
    <string name="txt_customerservice_bind_desc">绑定过程中遇到问题，可联系在线客服获得帮助</string>
    <string name="txt_customerservice_complete_desc">联系在线客服，反馈意见，获得帮助</string>
    <string name="txt_customerservice_phone_default">0731-89746010</string>
    <string name="txt_set_account">当前账号：input_field@163.com</string>
    <string name="txt_newmsg_remind">新消息提醒</string>
    <string name="txt_shock_remind">震动提醒</string>
    <string name="txt_voice_remind">声音提醒</string>
    <string name="txt_offline_remind">退出消息提醒</string>
    <string name="txt_modify_pwd">修改密码</string>
    <string name="txt_feedback">意见反馈</string>
    <string name="txt_version_check">检查更新</string>
    <string name="txt_app_recommend">应用推荐</string>
    <string name="txt_activity_about">活动相关</string>
    <string name="txt_app_about">关于</string>
    <string name="txt_clear_cache">清除缓存</string>
    <string name="toast_clearcache_ok">缓存清除成功</string>
    <string name="toast_clearcache_error">缓存清除失败</string>
    <string name="toast_oldpwd_isnull">请输入您的旧密码</string>
    <string name="toast_pwd_error">请输入8至20位数字或字符的新密码</string>
    <string name="toast_pwd_next_error">两次输入的密码不一致，请检查后重新输入</string>
    <string name="toast_suggest_isnull">请先填写意见再提交</string>
    <string name="toast_contactr_isnull">请留下您的联系方式</string>
    <string name="toast_commit_suggest_error">操作失败，请稍候再试</string>
    <string name="toast_commit_suggest_ok">提交成功</string>
    <string name="toast_down_plugin">开始下载插件</string>
    <string name="txt_logname">缘份吧</string>
    <string name="txt_vers_def">V1.0.0</string>
    <string name="txt_email">jiaoyoukf@126.com</string>
    <string name="txt_copyright">Copyright © 2014</string>
    <string name="txt_email_desc">客服邮箱:</string>
    <string name="txt_modifypwd_desc_001">你的缘份吧ID是</string>
    <string name="txt_modifypwd_desc_002">设置密码后，可以使用ID和密码登录</string>
    <string name="txt_oldpwd_desc">原密码</string>
    <string name="ext_oldpwd_hit">请输入您的原密码</string>
    <string name="txt_newpwd_desc">新密码</string>
    <string name="ext_newpwd_hit">支持英文和数字，8至20位</string>
    <string name="txt_replacepwd_desc">确认密码</string>
    <string name="ext_replacepwd_hit">再次填入新密码</string>
    <string name="qq_not_install">QQ未安装</string>
    <string name="qq_open_error">QQ客服出错请使用电话客服</string>
    <string name="button_reg">立即注册</string>
    <string name="bt_login">登录</string>
    <string name="bt_reg">注册</string>
    <string name="bt_complete">完成</string>
    <string name="bt_ok">确定</string>
    <string name="ext_setpwd_hit">(请设置8~20位密码)</string>
    <string name="ext_nickname_hit">请输入您的昵称</string>
    <string name="ext_age_hit">请选择您的年龄</string>
    <string name="ext_account_number_hit">手机/账户</string>
    <string name="ext_password_hit">密码</string>
    <string name="img_verify_girl_des">娃娃头像</string>
    <string name="toast_reg_error">注册失败</string>
    <string name="toast_nickname_isnull">请填写昵称</string>
    <string name="toast_age_isnull">请选择您的年龄</string>
    <string name="phone_digits">1234567890</string>
    <string name="diamond_explain_one">1、钻石可用于赠送虚拟礼物</string>
    <string name="diamond_explain_two">2、等价钻石礼物直接纳入我的个人钱包</string>
    <string name="diamond_explain_four">3、活动最终解释权归本APP所有</string>
</resources>