<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/base_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/px60_dp"
        android:paddingLeft="@dimen/px66_dp"
        android:text="@string/diamond_explain_one"
        android:textSize="@dimen/px52_sp"
        android:textColor="@color/color_888888"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/px60_dp"
        android:paddingLeft="@dimen/px66_dp"
        android:text="@string/diamond_explain_two"
        android:textSize="@dimen/px52_sp"
        android:textColor="@color/color_888888"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/px60_dp"
        android:paddingLeft="@dimen/px66_dp"
        android:text="@string/diamond_explain_four"
        android:textSize="@dimen/px52_sp"
        android:textColor="@color/color_888888"/>
</LinearLayout>